[package]
name = "rust-api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket_codegen = "0.5.0"

[dependencies.rocket_contrib]
version = "0.5.0"
default-features = false
features = ["json"]

[dependencies.rocket_macros]
version = "0.5.0"